--- a/content/themes/fedes/default.hbs
+++ b/content/themes/fedes/default.hbs
@@ -11,8 +11,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
   <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
-  <link rel="stylesheet" href="{{asset 'css/components.css'}}">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <link rel="stylesheet" href="{{asset 'css/application.css'}}">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   {{ghost_head}}
 </head>
@@ -24,9 +23,9 @@
     {{{body}}}
   </div>
 
-  <script type="text/javascript" src="{{asset 'js/min/app.js'}}"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script type="text/javascript" src="{{asset 'js/application.js'}}"></script>
+  <script type="text/javascript" src="{{asset 'js/vendor/bootstrap.min.js'}}"></script>
   {{ghost_foot}}
 </body>
 </html>
