Fedes Build Carousel

--- a/content/themes/fedes/lib/stylesheets/components/navbar.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbar.sass
@@ -1,25 +1,25 @@
-.navbar.navbar-default
-  width: 100%
-  height: 85px
-  position: fixed
-  border-radius: 0px
-  border-color: #FFFFFF
-  background-color: #eee
-
-.triangle-topright
-  width: 25px
-  height: 0
-  right: 100%
-  float: left
-  overflow: hidden
+.headerNavbar
+  border-width: 0px
+  background-color: #e6e6e6
   position: absolute
-  display: inline-block
-  border-top: 84px solid #eee
-  border-left: 58px solid transparent
+  border-radius: 0px
+  height: 84px
+  margin-left: 33%
+  width: 67%
 
-.navbar
-  left: 30%
+  .triangle-topright
+    width: 25
+    height: 0
+    border-top: 84px solid #e6e6e6
+    border-left: 58px solid transparent
+    display: inline-block
+    overflow: hidden
+    position: absolute
+    right: 100%
 
-.navbar .navbar-nav
-  padding-left: 400px
-  padding-top: 2%
+  .listHeader
+    padding-left: 400px
+    padding-top: 2%
+
+    .listItemHeader
+      color: #000000
