--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -1,3 +1,8 @@
 @import "vendor/bootstrap.min.css"
 
+@import "components/carousel"
+
 @import "components/navbar"
+
+@import "components/navbarCarousel"
+
