--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -1,15 +1,11 @@
 <div class="navbar-content">
-    <nav class="navbar navbar-default">
-
+    <nav class="navbar navbar-default headerNavbar">
       <div class="container-fluid">
         <div class ="triangle-topright"></div>
-        <ul class="nav navbar-nav">
-          {{#foreach navigation}}
-
-              <li class="nav-{{slug}}{{#if current}} nav-current{{/if}}"
-                  role="presentation"><a href="{{url absolute="true"}}">
-                  <i class="fa fa-arrow-circle-o-right"></i> {{label}}</a></li>
-          {{/foreach}}
+        <ul class="nav navbar-nav listHeader">
+          <li><a class="fa fa-arrow-circle-o-right listItemHeader" href="#">Inicio</a></li>
+          <li><a class="fa fa-arrow-circle-o-right listItemHeader" href="#">English</a></li>
+          <li><a class="fa fa-arrow-circle-o-right listItemHeader" href="#">Contactos</a></li>
         </ul>
       </div>
     </nav>
