Modified Icons navbar

--- a/content/themes/fedes/lib/stylesheets/components/navbar.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbar.sass
@@ -23,3 +23,7 @@
 
     .listItemHeader
       color: #000000
+      &:before
+        color: #a1a1a1
+        border-radius: 50px
+        border: 1px solid #a1a1a1
