--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -3,9 +3,9 @@
       <div class="container-fluid">
         <div class ="triangle-topright"></div>
         <ul class="nav navbar-nav listHeader">
-          <li><a class="fa fa-arrow-circle-o-right listItemHeader" href="#">Inicio</a></li>
-          <li><a class="fa fa-arrow-circle-o-right listItemHeader" href="#">English</a></li>
-          <li><a class="fa fa-arrow-circle-o-right listItemHeader" href="#">Contactos</a></li>
+          <li><a class="glyphicon glyphicon-chevron-right listItemHeader" href="#">Inicio</a></li>
+          <li><a class="glyphicon glyphicon-chevron-right listItemHeader" href="#">English</a></li>
+          <li><a class="glyphicon glyphicon-chevron-right listItemHeader" href="#">Contactos</a></li>
         </ul>
       </div>
     </nav>
