Proyectos Gallery Added

--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -2,6 +2,8 @@
 
 @import "components/carousel"
 
+@import "components/gallery.sass"
+
 @import "components/navbar"
 
 @import "components/navbarCarousel"
