--- a/content/themes/fedes/index.hbs
+++ b/content/themes/fedes/index.hbs
@@ -17,7 +17,42 @@
 
 {{! The main content area on the homepage }}
 <main id="content" class="content" role="main">
-    {{! The tag below includes the post loop - partials/loop.hbs }}
-    {{!--{{> "loop"}}--}}
     {{> "carousel"}}
+    <div class="container gallery-principal">
+        <h2 class="gallery-proyectos">Proyectos</h2>
+        <div class="row rowGallery">
+            <div class="col-md-4 imgContainer">
+                <a href="#" class="thumbnail imgGallery">
+                    <img src="assets/img/carousel2.jpg" alt="prendho">
+                </a>
+            </div>
+            <div class="col-md-4 imgContainer">
+                <a href="#" class="thumbnail imgGallery">
+                    <img src="assets/img/cima.jpg" alt="cima">
+                </a>
+            </div>
+            <div class="col-md-4 imgContainer">
+                <a href="#" class="thumbnail imgGallery last-picture">
+                    <img src="assets/img/copdesarrollo.jpg" alt="copdesarrollo">
+                </a>
+            </div>
+        </div>
+        <div class="row rowGallery">
+            <div class="col-md-4 imgContainer">
+                <a href="#" class="thumbnail imgGallery">
+                    <img src="assets/img/sinfin.jpg" alt="sinfin" >
+                </a>
+            </div>
+            <div class="col-md-4 imgContainer">
+                <a href="#" class="thumbnail imgGallery">
+                    <img src="assets/img/agropecuario.jpg" alt="agropecuario" >
+                </a>
+            </div>
+            <div class="col-md-4 imgContainer">
+                <a href="#" class="thumbnail imgGallery last-picture">
+                    <img src="assets/img/negocios.jpg" alt="negocios">
+                </a>
+            </div>
+        </div>
+    </div>
 </main>
