--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -44,6 +44,7 @@
     width: 100%
     height: 15%
     bottom: 0
+    padding-bottom: 88px;
 
   .textFooter
     color: #FFFFFF
@@ -51,4 +52,3 @@
     float:none
     padding-left: 25%
     padding-right: 25%
-
