--- a/content/themes/fedes/default.hbs
+++ b/content/themes/fedes/default.hbs
@@ -12,6 +12,7 @@
 
   <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
   <link rel="stylesheet" href="{{asset 'css/application.css'}}">
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
   {{ghost_head}}
 </head>
 <body class="{{body_class}}">
