--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -2,9 +2,13 @@
 
 @import "components/carousel"
 
+@import "components/footer.sass"
+
 @import "components/gallery.sass"
 
 @import "components/navbar"
 
 @import "components/navbarCarousel"
+
+@import "components/navbarFooter"
 
