--- a/content/themes/fedes/lib/stylesheets/components/navbar.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbar.sass
@@ -1,17 +1,20 @@
+.logoNavbar
+  position: absolute
+
 .headerNavbar
   border-width: 0px
   background-color: #e6e6e6
   position: absolute
   border-radius: 0px
-  height: 84px
+  height: 80px
   margin-left: 33%
   width: 67%
 
   .triangle-topright
     width: 25
     height: 0
-    border-top: 84px solid #e6e6e6
-    border-left: 58px solid transparent
+    border-top: 80px solid #e6e6e6
+    border-left: 48px solid transparent
     display: inline-block
     overflow: hidden
     position: absolute
