--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -15,7 +15,7 @@
       <div class ="triangle-topleft carousel"></div>
       <div class ="triangle-topright carousel"></div>
       <ul class="nav navbar-nav carousel navbar-list">
-        <li><a class="fa fa-circle navbar-menuItem" href="#">Servicios</a></li>
+        <li><a class="fa fa-circle navbar-menuItem" href="/servicios">Servicios</a></li>
         <li><a class="fa fa-circle navbar-menuItem" href="#">Equipo</a></li>
         <li><a class="fa fa-circle navbar-menuItem" href="#">Cooperantes</a></li>
         <li><a class="fa fa-circle navbar-menuItem" href="#">Blog</a></li>
@@ -33,15 +33,15 @@
     <div class="menu-carousel"></div>
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <img src="./assets/img/carousel1.jpg" alt="Chania" width="460" height="345">
+        <img src="{{asset 'img/carousel1.jpg'}}" alt="Chania" width="460" height="345">
       </div>
 
       <div class="item">
-        <img src="./assets/img/carousel1.jpg" alt="Chania" width="460" height="345">
+        <img src="{{asset 'img/carousel1.jpg'}}" alt="Chania" width="460" height="345">
       </div>
 
       <div class="item">
-        <img src="./assets/img/consultoria.jpg" alt="Flower" width="460" height="345">
+        <img src="{{asset 'img/consultoria.jpg'}}" alt="Flower" width="460" height="345">
       </div>
     </div>
 
