--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -1,4 +1,7 @@
 <div class="navbar-content">
+  <div class="logoNavbar">
+    <img src="{{asset 'img/logo.png'}}" class="img-responsive">
+  </div>
     <nav class="navbar navbar-default headerNavbar">
       <div class="container-fluid">
         <div class ="triangle-topright"></div>
