--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -10,6 +10,7 @@
     border-radius: 0px
     border-right: 0,5px solid
     border-left: 1px solid
+    margin-bottom: 0px
     img
       width: 100%
       height: 250px
@@ -24,3 +25,6 @@
 
   .rowGallery
       margin-left: 85px;
+
+.textImgServicios
+  background: #f2f2f2
