--- a/content/themes/fedes/partials/footer.hbs
+++ b/content/themes/fedes/partials/footer.hbs
@@ -77,7 +77,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <div class ="triangle-topright carousel"></div>
               <ul class="nav navbar-nav carousel navbar-list">
-                <li><a class="fa fa-circle navbar-menuItem" href="#">Servicios</a></li>
+                <li><a class="fa fa-circle navbar-menuItem" href="/servicios">Servicios</a></li>
                 <li><a class="fa fa-circle navbar-menuItem" href="#">Equipo</a></li>
                 <li><a class="fa fa-circle navbar-menuItem" href="#">Cooperantes</a></li>
                 <li><a class="fa fa-circle navbar-menuItem" href="#">Blog</a></li>
