Added description of images of services and added jquery

--- a/content/themes/fedes/page-servicios.hbs
+++ b/content/themes/fedes/page-servicios.hbs
@@ -24,40 +24,40 @@
         <h2 class="gallery-proyectos">Proyectos</h2>
         <div class="row rowGallery">
             <div class="col-md-4 imgContainer">
-                <a href="#textConsultoria" class="thumbnail imgGallery galleryServicios serviciosConsultoria " data-toggle="collapse">
+                <a  class="thumbnail imgGallery galleryServicios serviciosConsultoria ">
                     <img src="{{asset 'img/consultoria.jpg'}}" alt="consultoria" >
                 </a>
             </div>
             <div class="col-md-4 imgContainer">
-                <a href="#textAsesoramiento" class="thumbnail imgGallery galleryServicios serviciosAsesoramiento" data-toggle="collapse">
+                <a  class="thumbnail imgGallery galleryServicios serviciosAsesoramiento">
                     <img src="{{asset 'img/asesoramieto.jpg'}}" alt="asesoramiento">
                 </a>
             </div>
             <div class="col-md-4 imgContainer">
-                <a href="#textTrabajo" class="thumbnail imgGallery galleryServicios last-picture serviciosTrabajo" data-toggle="collapse">
+                <a  class="thumbnail imgGallery galleryServicios last-picture serviciosTrabajo">
                     <img src="{{asset 'img/trabajo.jpg'}}" alt="trabajo">
                 </a>
             </div>
         </div>
     </div>
-    <div id="textConsultoria" class="collapse">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    <div id="textConsultoria" class="collapse textServicios">
+        Consultoria ipsum dolor sit amet, consectetur adipisicing elit,
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </div>
-    <div id="textAsesoramiento" class="collapse">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+    <div id="textAsesoramiento" class="collapse textServicios">
+        Asesoramiento ipsum dolor sit amet, consectetur adipisicing elit,
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </div>
-      <div id="textTrabajo" class="collapse">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+      <div id="textTrabajo" class="collapse textServicios">
+        Trabajo ipsum dolor sit amet, consectetur adipisicing elit,
         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
     </div>
     {{> "footer"}}
-     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+     <script type="text/javascript" src="{{asset 'js/vendor/jquery.min.js'}}"></script>
+     <script type="text/javascript" src="{{asset 'js/pageServicios.js'}}"></script>
 </main>
 
 {{/post}}
