--- a/content/themes/fedes/index.hbs
+++ b/content/themes/fedes/index.hbs
@@ -39,10 +39,10 @@
                 </a>
             </div>
         </div>
-        <div class="row rowGallery">
+        <div class="row rowGallery gallerySecondary">
             <div class="col-md-4 imgContainer">
                 <a href="#" class="thumbnail imgGallery">
-                    <img src="{{asset 'img/sinfin.jpg'}}" alt="sinfin" >
+                    <img src="{{asset 'img/imgsinfin.jpg'}}" alt="sinfin" >
                 </a>
             </div>
             <div class="col-md-4 imgContainer">
