--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -26,5 +26,8 @@
   .rowGallery
       margin-left: 85px;
 
+  .gallerySecondary
+      padding-bottom: 33px;
+
 .textImgServicios
   background: #f2f2f2
