--- a/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
@@ -6,7 +6,7 @@
   height: 74px
   z-index: 2
   margin-top: -75px
-  margin-left: 39%
+  margin-left: 422px;
   margin-bottom: 0
   width: 61%
   display: inline-block
