--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -15,11 +15,11 @@
       <div class ="triangle-topleft carousel"></div>
       <div class ="triangle-topright carousel"></div>
       <ul class="nav navbar-nav carousel navbar-list">
-        <li><a class="fa fa-circle navbar-menuItem" href="/servicios">Servicios</a></li>
-        <li><a class="fa fa-circle navbar-menuItem" href="#">Equipo</a></li>
-        <li><a class="fa fa-circle navbar-menuItem" href="#">Cooperantes</a></li>
-        <li><a class="fa fa-circle navbar-menuItem" href="#">Blog</a></li>
-        <li><a class="fa fa-circle navbar-menuItem" href="#">Aliados</a></li>
+        <li><a class="navbar-menuItem" href="/servicios">Servicios</a></li>
+        <li><a class="navbar-menuItem" href="#">Equipo</a></li>
+        <li><a class="navbar-menuItem" href="#">Cooperantes</a></li>
+        <li><a class="navbar-menuItem" href="#">Blog</a></li>
+        <li><a class="navbar-menuItem" href="#">Aliados</a></li>
       </ul>
     </div>
   </div>
