--- a/content/themes/fedes/default.hbs
+++ b/content/themes/fedes/default.hbs
@@ -12,7 +12,7 @@
 
   <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
   <link rel="stylesheet" href="{{asset 'css/application.css'}}">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{asset 'css/font-awesome.min.css'}}">
   {{ghost_head}}
 </head>
 <body class="{{body_class}}">
@@ -23,7 +23,7 @@
     {{{body}}}
   </div>
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+  <script type="text/javascript" src="{{asset 'js/vendor/jquery.min.js'}}"></script>
   <script type="text/javascript" src="{{asset 'js/application.js'}}"></script>
   <script type="text/javascript" src="{{asset 'js/vendor/bootstrap.min.js'}}"></script>
   {{ghost_foot}}
