--- a/content/themes/fedes/lib/stylesheets/components/navbar.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbar.sass
@@ -8,7 +8,7 @@
   border-radius: 0px
   height: 80px
   margin-left: 33%
-  width: 67%
+  width: 758px
 
   .triangle-topright
     width: 25
@@ -22,7 +22,7 @@
 
   .listHeader
     padding-left: 400px
-    padding-top: 2%
+    padding-top: 20px
 
     .listItemHeader
       color: #000000
