--- a/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
@@ -8,7 +8,7 @@
   margin-top: -75px
   margin-left: 422px;
   margin-bottom: 0
-  width: 61%
+  width: 615px
   display: inline-block
 
   .navbar-list
