--- a/content/themes/fedes/page-servicios.hbs
+++ b/content/themes/fedes/page-servicios.hbs
@@ -2,7 +2,7 @@
 {{#post}}
 <header class="main-header {{#if @blog.cover}}" style="background-image: url({{@blog.cover}}){{else}}no-cover{{/if}}">
     <link rel="stylesheet" href="{{asset 'css/application.css'}}">
-    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{asset 'css/font-awesome.min.css'}}">
     <nav class="main-nav overlay clearfix">
        {{>navigation}}
     </nav>
@@ -57,7 +57,7 @@
     </div>
     {{> "footer"}}
      <script type="text/javascript" src="{{asset 'js/vendor/jquery.min.js'}}"></script>
-     <script type="text/javascript" src="{{asset 'js/pageServicios.js'}}"></script>
+     <script type="text/javascript" src="{{asset 'js/application.js'}}"></script>
 </main>
 
 {{/post}}
