css and js moved to default.hbs

--- a/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
@@ -6,9 +6,9 @@
   height: 74px
   z-index: 2
   margin-top: -75px
-  margin-left: 422px;
+  margin-left: 37%
   margin-bottom: 0
-  width: 615px
+  width: 63%
   display: inline-block
 
   .navbar-list
