--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -1,8 +1,9 @@
 @import "vendor/bootstrap.min.css"
 
+@import "components/navbar"
 @import "components/carousel"
+@import "components/servicios"
 @import "components/footer.sass"
 @import "components/gallery.sass"
-@import "components/navbarCarousel"
 @import "components/navbarFooter"
-@import "components/servicios"
+@import "components/navbarCarousel"
