refactor main navbar WIP
(pretty much a Work In Progress)

- remove fontAwesome
- remove logo non-asset

--- a/content/themes/fedes/lib/stylesheets/components/navbar.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbar.sass
@@ -1,32 +1,38 @@
-.logoNavbar
-  position: absolute
+.header-navbar
+  border: 0
+  background: 0
+  .navbar-toggle
+    float: left
 
-.headerNavbar
-  border-width: 0px
-  background-color: #e6e6e6
-  position: absolute
-  border-radius: 0px
-  height: 80px
-  margin-left: 33%
-  width: 67%
-
-  .triangle-topright
-    width: 25
-    height: 0
-    border-top: 80px solid #e6e6e6
-    border-left: 48px solid transparent
-    display: inline-block
-    overflow: hidden
-    position: absolute
-    right: 100%
-
-  .listHeader
-    padding-left: 400px
-    padding-top: 20px
-
-    .listItemHeader
-      color: #000000
-      &:before
-        color: #a1a1a1
-        border-radius: 50px
-        border: 1px solid #a1a1a1
+// .logoNavbar
+//   position: absolute
+//
+// .headerNavbar
+//   border-width: 0px
+//   background-color: #e6e6e6
+//   position: absolute
+//   border-radius: 0px
+//   height: 80px
+//   margin-left: 33%
+//   width: 67%
+//
+//   .triangle-topright
+//     width: 25
+//     height: 0
+//     border-top: 80px solid #e6e6e6
+//     border-left: 48px solid transparent
+//     display: inline-block
+//     overflow: hidden
+//     position: absolute
+//     right: 100%
+//
+//   .listHeader
+//     padding-left: 400px
+//     padding-top: 20px
+//
+//     .listItemHeader
+//       color: #000000
+//       &:before
+//         color: #a1a1a1
+//         border-radius: 50px
+//         border: 1px solid #a1a1a1
