--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -1,15 +1,22 @@
-<div class="navbar-content">
-  <div class="logoNavbar">
-    <img src="{{asset 'img/logo.png'}}" class="img-responsive">
+<div class="navbar navbar-default header-navbar">
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar-menu">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="/">
+      <img src="{{ @blog.logo }}" class="img-responsive">
+    </a>
   </div>
-    <nav class="navbar navbar-default headerNavbar">
-      <div class="container-fluid">
-        <div class ="triangle-topright"></div>
-        <ul class="nav navbar-nav listHeader">
-          <li><a class="glyphicon glyphicon-chevron-right listItemHeader" href="#">Inicio</a></li>
-          <li><a class="glyphicon glyphicon-chevron-right listItemHeader" href="#">English</a></li>
-          <li><a class="glyphicon glyphicon-chevron-right listItemHeader" href="#">Contactos</a></li>
-        </ul>
-      </div>
-    </nav>
+  <!-- <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class ="triangle-topright"></div>
+      <ul class="nav navbar-nav listHeader">
+        <li><a class="glyphicon glyphicon-chevron-right listItemHeader" href="#">Inicio</a></li>
+        <li><a class="glyphicon glyphicon-chevron-right listItemHeader" href="#">English</a></li>
+        <li><a class="glyphicon glyphicon-chevron-right listItemHeader" href="#">Contactos</a></li>
+      </ul>
+    </div>
+  </nav> -->
 </div>
