--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -1,9 +1,12 @@
 @import "vendor/bootstrap.min.css"
 
+@import "components/variables"
 @import "components/navbar"
 @import "components/carousel"
 @import "components/servicios"
-@import "components/footer.sass"
-@import "components/gallery.sass"
+@import "components/header"
+@import "components/footer"
+@import "components/gallery"
 @import "components/navbarFooter"
 @import "components/navbarCarousel"
+
