--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -4,13 +4,18 @@
   padding-right: 0px
   margin-right: 0px
   width: 100%
-  margin-top: 132px
+
+  .carousel-main
+    margin-top: 1.9em
+
+    @media screen and (max-width: $mobile-width)
+      margin-top: 2em
 
   .menu-carousel
     padding: 100px
     position: absolute
     z-index: 1
-    background-color: #0055b8
+    background-color: $blue-light
     width: 100%
     height: 42%
     bottom: 0
