--- a/content/themes/fedes/default.hbs
+++ b/content/themes/fedes/default.hbs
@@ -12,7 +12,7 @@
 
   <link rel="shortcut icon" href="{{asset "favicon.ico"}}">
   <link rel="stylesheet" href="{{asset 'css/application.css'}}">
-  <link rel="stylesheet" href="{{asset 'css/font-awesome.min.css'}}">
+  {{!--<link rel="stylesheet" href="{{asset 'css/font-awesome.min.css'}}">--}}
   {{ghost_head}}
 </head>
 <body class="{{body_class}}">
