--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -1,35 +1,6 @@
-<nav class="navbar navbar-default carousel main-navbar">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <div class ="triangle-topleft carousel"></div>
-      <div class ="triangle-topright carousel"></div>
-      <ul class="nav navbar-nav carousel navbar-list">
-        <li><a class="navbar-menuItem" href="/servicios">Servicios</a></li>
-        <li><a class="navbar-menuItem" href="#">Equipo</a></li>
-        <li><a class="navbar-menuItem" href="#">Cooperantes</a></li>
-        <li><a class="navbar-menuItem" href="#">Blog</a></li>
-        <li><a class="navbar-menuItem" href="#">Aliados</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-
-
 <div class="container carousel">
   <br>
-  <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <div id="myCarousel" class="carousel slide carousel-main" data-ride="carousel">
     <div class="menu-carousel"></div>
     <div class="carousel-inner" role="listbox">
       <div class="item active">
