--- a/content/themes/fedes/partials/navigation.hbs
+++ b/content/themes/fedes/partials/navigation.hbs
@@ -1,15 +1,12 @@
-<div class="navbar navbar-default header-navbar">
+{{!--<div class="navbar navbar-default header-navbar">
   <div class="navbar-header">
     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-navbar-menu">
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
       <span class="icon-bar"></span>
     </button>
-    <a class="navbar-brand" href="/">
-      <img src="{{ @blog.logo }}" class="img-responsive">
-    </a>
   </div>
-  <!-- <nav class="navbar navbar-default">
+  <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class ="triangle-topright"></div>
       <ul class="nav navbar-nav listHeader">
@@ -18,5 +15,39 @@
         <li><a class="glyphicon glyphicon-chevron-right listItemHeader" href="#">Contactos</a></li>
       </ul>
     </div>
-  </nav> -->
-</div>
+  </nav>
+</div>--}}
+
+<header class="main-header">
+  <a class="logo-fedes" href="/">
+    <img src="{{ @blog.logo }}" class="img-responsive">
+  </a>
+  <nav class="navbar navbar-default main-navbar">
+    <div class="container-fluid">
+      <div class="navbar-header main-navbar-header">
+        <button type="button"
+          class="navbar-toggle collapsed main-navbar-button"
+          data-toggle="collapse"
+          data-target="#main-navbar-collapse"
+          aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div>
+
+      <div class="collapse navbar-collapse" id="main-navbar-collapse">
+        <div class="triangle-topleft"></div>
+        <div class="triangle-topright"></div>
+        <ul class="nav navbar-nav navbar-list">
+          <li><a class="navbar-menuItem" href="/servicios">Servicios</a></li>
+          <li><a class="navbar-menuItem" href="#">Equipo</a></li>
+          <li><a class="navbar-menuItem" href="#">Cooperantes</a></li>
+          <li><a class="navbar-menuItem" href="#">Blog</a></li>
+          <li><a class="navbar-menuItem" href="#">Aliados</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
