--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -25,8 +25,10 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <div class="carousel-footer"><span class="textFooter">&#60;&#60;La
-    innovación es lo que distingue a los líderes de los
-    seguidores&#62;&#62;.- Steve Jobs</span>
-  </span></div>
+
+  <section>
+    {{#get "posts" slug="texto-principal" as |article|}}
+      {{> main-text article=article}}
+    {{/get}}
+  </section>
 </div>
