--- a/content/themes/fedes/partials/footer.hbs
+++ b/content/themes/fedes/partials/footer.hbs
@@ -5,16 +5,18 @@
         <div class="col-lg-12 colFooter">
           <div class="col-md-4">
            <h6 class="textFormFooter">Use este formulario para enviarnos un mensaje:</h6>
-            <form>
+            <form data-toggle="validator" role="form">
               <div class="form-group">
-                <input type="text" class="form-control" id="nameInput" placeholder="nombre">
+                <input type="text" class="form-control" id="nameInput"
+                placeholder="nombre" required>
               </div>
               <div class="form-group">
-                <input type="email" class="form-control" id="emailInput" placeholder="e-mail">
+                <input type="email" class="form-control" id="emailInput" placeholder="e-mail" required>
               </div>
               <div class="form-group">
-                <textarea class="form-control" id="mensajeTextarea" rows="3" placeholder="mensaje"></textarea>
+                <textarea class="form-control" id="mensajeTextarea" rows="3" placeholder="mensaje" required ></textarea>
               </div>
+              <div class="help-block with-errors"></div>
               <button type="submit" class="btn btn-primary">enviar</button>
             </form>
           </div>
