added  sign to footer

--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -28,5 +28,8 @@ footer
 
   .leyendfooter
     align : left
-    color: #00b09a
+    color: $blue-one
     padding-left: 73px
+    @media screen and (max-width: $mobile-width)
+      float: right
+      padding-bottom: 50px
