--- a/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
+++ b/content/themes/fedes/lib/stylesheets/components/navbarFooter.sass
@@ -8,11 +8,11 @@
   margin-top: -75px
   margin-left: 37%
   margin-bottom: 0
-  width: 59.7%
+  width: 63%
   display: inline-block
   @media screen and (max-width: $mobile-width)
     width: 100%
-    margin-left: -15px
+    margin-left: 0
     margin-top: -50px
     height: 45px
 
