Show projects as posts

--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -20,7 +20,7 @@
     margin-top: 1.9em
 
     @media screen and (max-width: $mobile-width)
-      margin-top: 2em
+      margin-top: 0px;
 
   .menu-carousel
     padding: 100px
@@ -64,9 +64,10 @@
 
 
 
-  .textFooter
+  .text-footer
     color: #FFFFFF
     font-weight: bold
     float:none
     padding-left: 25%
     padding-right: 25%
+    text-align: center
