--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -30,7 +30,7 @@
     {{#get "posts" slug="texto-principal" as |article|}}
       {{#article}}
         <div class="carousel-footer">
-          <span class="textFooter">
+          <span class="text-footer">
             {{content}}
           </span>
         </div>
