--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -2,12 +2,21 @@ footer
   background: #003c71
   padding-top: 1px
 
+  .circleFooter
+    margin-left: 48%
+    width: 100px
+    height: 50px
+    border-radius: 0 0 100px 100px
+    background: $white
+    padding-top: 14px
+    padding-left: 39px
+    margin-top: -3%
   .textFooter
     color: #FFFFFF
   .titleFooter
-    text-align: center;
-    padding-top: 45px;
-    padding-bottom: 35px;
+    text-align: center
+    padding-top: 45px
+    padding-bottom: 35px
 
   .imgGalleryFooter
     border: 0px solid
