--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -21,13 +21,13 @@
   .imgContainer
       padding-right: 0
       padding-left: 0
-      width: 300px;
+      width: 300px
 
   .rowGallery
-      margin-left: 85px;
+      margin-left: 85px
 
   .gallerySecondary
-      padding-bottom: 33px;
+      padding-bottom: 33px
 
 .textImgServicios
   background: #f2f2f2
