--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -38,3 +38,6 @@
     {{/get}}
   </section>
 </div>
+<div class="circleCarousel" data-toggle="collapse" data-target="#galleryPrincipal">
+  <img class="ruedaBlanca" src="{{asset 'img/rueda_blanca.png'}}" alt="rueda" width="20" height="20">
+</div>
