--- a/content/themes/fedes/partials/footer.hbs
+++ b/content/themes/fedes/partials/footer.hbs
@@ -1,4 +1,7 @@
 <footer>
+  <div class="circleFooter">
+    <img class="ruedaGris" src="{{asset 'img/rueda_gris.png'}}" alt="rueda" width="20" height="20">
+  </div>
     <h3 class="textFooter titleFooter">Contactanos</h3>
     <div class="container footerPrincipal">
       <div class="row">
