--- a/content/themes/fedes/index.hbs
+++ b/content/themes/fedes/index.hbs
@@ -6,7 +6,7 @@
   {{! The tag below includes the post loop - partials/loop.hbs }}
   {{> "loop"}}
   {{> "carousel"}}
-  <div class="container gallery-principal">
+  <div class="collapse container gallery-principal" id="galleryPrincipal">
     <h2 class="gallery-proyectos">Proyectos</h2>
     <div class="row rowGallery">
       <div class="col-md-4 imgContainer">
