--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -1,3 +1,14 @@
+.circleCarousel
+  margin-left: 48%
+  width: 100px
+  height: 50px
+  border-radius: 0 0 100px 100px
+  background: $blue-dark
+  padding-top: 14px
+  padding-left: 39px
+  cursor: pointer
+  position: absolute
+
 .container.carousel
   padding-left: 0px
   margin-left: 0px
@@ -42,14 +53,16 @@
     padding-left: 40px
 
   .carousel-footer
-    background-color: #003c71
-    padding-top: 65px
+    background-color: $blue-dark
+    padding-top: 62px
     position: absolute
     z-index: 3
     width: 100%
-    height: 15%
+    height: 21%
     bottom: 0
-    padding-bottom: 88px;
+    padding-bottom: 88px
+
+
 
   .textFooter
     color: #FFFFFF
