--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -1,20 +1,10 @@
-.circleCarousel
-  margin-left: 48%
-  width: 100px
-  height: 50px
-  border-radius: 0 0 100px 100px
-  background: $blue-dark
-  padding-top: 14px
-  padding-left: 39px
-  cursor: pointer
-  position: absolute
-
 .container.carousel
   padding-left: 0px
   margin-left: 0px
   padding-right: 0px
   margin-right: 0px
   width: 100%
+  position: relative
 
   .carousel-main
     margin-top: 1.9em
@@ -22,47 +12,67 @@
     @media screen and (max-width: $mobile-width)
       margin-top: 0px;
 
+  .carousel-inner
+    .item
+      max-height: 800px
+
   .menu-carousel
-    padding: 100px
     position: absolute
     z-index: 1
-    background-color: $blue-light
+    background-color: #002d54
     width: 100%
-    height: 42%
+    height: 30%
     bottom: 0
-    opacity: 0.6
+    opacity: 0.7
+    position: absolute
 
-  .left.carousel-control
-    top: 58%
-    background-color: transparent
-    z-index: 2
-    height: 215px
+    .carousel.text
+      text-align: left
+      color: #fff
+      margin-top: 4%
+      margin-left: 18%
+      margin-right: 15%
+      white-space: normal
+      position: relative
+      h1
+        font-size: 3.3vw
+        font-weight: bold
+        opacity: 1
+        color: #fff
+      p
+        font-size: 1.8vw
+        font-weight: 200
+        opacity: 1
+        margin: 0
+        color: #fff
 
-  .right.carousel-control
-    top: 58%
-    background-color: transparent
-    z-index: 2
-    height: 215px
+    .left.carousel-control
+      opacity: 1
+    .right.carousel-control
+      opacity: 1
 
   .carousel-inner > .item > img,
   .carousel-inner > .item > a > img
     width: 100%
     margin: auto
 
-  a.fa.fa-circle
-    padding-left: 40px
+  .circleCarousel
+    margin-left: 48%
+    width: 100px
+    height: 50px
+    border-radius: 0 0 100px 100px
+    background: $blue-dark
+    padding-top: 14px
+    padding-left: 39px
+    cursor: pointer
+    position: absolute
 
   .carousel-footer
-    background-color: $blue-dark
-    padding-top: 62px
+    background-color: green
     position: absolute
     z-index: 3
     width: 100%
-    height: 21%
     bottom: 0
-    padding-bottom: 88px
-
-
 
   .text-footer
     color: #FFFFFF
@@ -71,3 +81,41 @@
     padding-left: 25%
     padding-right: 25%
     text-align: center
+
+@media only screen and (max-width: $mobile-width)
+  .container.carousel
+    .menu-carousel
+      position: absolute
+      height: 275px
+      width: 80%
+      margin-left: 45px
+      background-color: #002d54
+      .carousel.text
+        text-align: left
+        margin: 10px 20px
+        h1
+          font-size: 30px
+          color: #ffffff
+          opacity: 1
+        p
+          font-size: 15px
+          opacity: 1
+
+      .carousel-controls-wrapper
+        position: absolute
+        display: block
+        width: 100%
+        height: 70px
+        text-align: center
+        margin-top: -30px
+        bottom: 0
+
+        .carousel-control
+          position: relative
+          display: inline-block
+          height: 40px
+          width: 40px
+          background-image: none
+          border: 2px solid #fff
+          border-radius: 50px
+          margin: 0px 20px
