--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -1,43 +1,49 @@
 <div class="container carousel">
-  <br>
-  <div id="myCarousel" class="carousel slide carousel-main" data-ride="carousel">
-    <div class="menu-carousel"></div>
+  <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner" role="listbox">
       <div class="item active">
         <img src="{{asset 'img/carousel1.jpg'}}" alt="Chania" width="460" height="345">
       </div>
-
       <div class="item">
         <img src="{{asset 'img/carousel1.jpg'}}" alt="Chania" width="460" height="345">
       </div>
-
       <div class="item">
         <img src="{{asset 'img/consultoria.jpg'}}" alt="Flower" width="460" height="345">
       </div>
     </div>
-
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
+    <div class="menu-carousel">
+      <div class="carousel text text-nowrap">
+        <h1>Lorem ipsum tdolor sit amet</h1>
+        <p>
+          nam ea quod aperiri eruditi. Quot verear intellegam his eu, esos ut harum salutatus torquatos.
+        </p>
+      </div>
+      <div class="carousel-controls-wrapper">
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+          <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+          <span class="glyphicon glyphicon-chevron-right"  aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+    </div>
   </div>
-
-  <section>
-    {{#get "posts" slug="texto-principal" as |article|}}
-      {{#article}}
-        <div class="carousel-footer">
-          <span class="text-footer">
-            {{content}}
-          </span>
-        </div>
-      {{/article}}
-    {{/get}}
-  </section>
 </div>
+
+<section>
+  {{#get "posts" slug="texto-principal" as |article|}}
+    {{#article}}
+      <div class="carousel-footer">
+        <span class="textFooter">
+          {{content}}
+        </span>
+      </div>
+    {{/article}}
+  {{/get}}
+</section>
+
 <div class="circleCarousel" data-toggle="collapse" data-target="#galleryPrincipal">
   <img class="ruedaBlanca" src="{{asset 'img/rueda_blanca.png'}}" alt="rueda" width="20" height="20">
 </div>
