--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -13,6 +13,15 @@
     img
       width: 100%
       height: 220px
+      position: relative
+    div
+      width: 90%
+      top: 5px
+      position: absolute
+      visibility: hidden
+    &:hover
+      div
+        visibility: visible
 
   .last-picture
     border-right: 1px solid
