--- a/content/themes/fedes/lib/stylesheets/components/footer.sass
+++ b/content/themes/fedes/lib/stylesheets/components/footer.sass
@@ -1,5 +1,5 @@
 footer
-  background: #003c71
+  background: $blue-dark
   padding-top: 1px
 
   .circleFooter
@@ -21,6 +21,7 @@ footer
   .imgGalleryFooter
     border: 0px solid
     border-radius: 0px
+    background-color: $blue-dark
     padding: 0
     width: 50px
     height: 50px
