Add header on services page

--- a/content/themes/fedes/index.hbs
+++ b/content/themes/fedes/index.hbs
@@ -8,7 +8,7 @@
   {{> "carousel"}}
   <div class="collapse container gallery-principal" id="galleryPrincipal">
     <div>
-      <h2 class="gallery-proyectos">Proyectos</h2>
+      <h2 class="gallery-title">Proyectos</h2>
       <p class="text-center">nam ea quod aperiri eruditi.</p>
     </div>
     <div class="row">
