--- a/content/themes/fedes/lib/stylesheets/components/gallery.sass
+++ b/content/themes/fedes/lib/stylesheets/components/gallery.sass
@@ -1,6 +1,6 @@
 .container.gallery-principal
   margin-top: 60px
-  .gallery-proyectos
+  .gallery-title
     text-align: center
     color: #003c71
 
