--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -30,9 +30,11 @@
     {{#get "posts" slug="texto-principal" as |article|}}
       {{#article}}
         <div class="carousel-footer">
-          <span class="text-footer">
-            {{content}}
-          </span>
+          {{#is "index"}}
+            <span class="text-footer">
+              {{content}}
+            </span>
+          {{/is}}
         </div>
       {{/article}}
     {{/get}}
