--- a/content/themes/fedes/page-servicios.hbs
+++ b/content/themes/fedes/page-servicios.hbs
@@ -2,43 +2,57 @@
 {{#post}}
   {{! The main content area on the homepage }}
   <main id="content" class="content" role="main">
-      {{! The tag below includes the post loop - partials/loop.hbs }}
-      {{> "loop"}}
-      {{> "carousel"}}
-      <div class="container gallery-principal">
-        <h2 class="gallery-title">Servicios</h2>
-      </div>
-      <div class="row rowGallery">
-          <div class="col-md-4 imgContainer">
-              <a  class="thumbnail imgGallery galleryServicios serviciosConsultoria ">
-                  <img src="{{asset 'img/consultoria.jpg'}}" alt="consultoria" >
-              </a>
-          </div>
-          <div class="col-md-4 imgContainer">
-              <a  class="thumbnail imgGallery galleryServicios serviciosAsesoramiento">
-                  <img src="{{asset 'img/asesoramieto.jpg'}}" alt="asesoramiento">
-              </a>
-          </div>
-          <div class="col-md-4 imgContainer">
-              <a  class="thumbnail imgGallery galleryServicios last-picture serviciosTrabajo">
-                  <img src="{{asset 'img/trabajo.jpg'}}" alt="trabajo">
-              </a>
-          </div>
-      </div>
-      <div id="textConsultoria" class="collapse textServicios">
-          Consultoria ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </div>
-      <div id="textAsesoramiento" class="collapse textServicios">
-          Asesoramiento ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      </div>
-        <div id="textTrabajo" class="collapse textServicios">
-          Trabajo ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      {{> "carousel-min"}}
+      <div class="collapse container gallery-principal" id="gallery-secondary">
+        <div>
+          <h2 class="gallery-title">Servicios</h2>
+        </div>
+        <div class="row">
+          <section class="col-xs-12 col-sm-4">
+            <figure>
+              <div>
+                <img src="{{asset 'img/consultoria.jpg'}}"
+                  class="img-responsive"
+                  alt="consultoria"
+                  data-toggle="collapse"
+                  data-target="#text-consultoria"/>
+                <div class="collapse" id="text-consultoria">
+                  <p>Consultoria ipsum dolor sit amet, consectetur adipisicing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+              </div>
+            </figure>
+            <figure>
+              <div>
+                <img src="{{asset 'img/asesoramieto.jpg'}}"
+                  class="img-responsive"
+                  alt="asesoramiento"
+                  data-toggle="collapse"
+                  data-target="#text-asesoramiento"/>
+                <div class="collapse" id="text-asesoramiento">
+                  <p>Asesoramiento ipsum dolor sit amet, consectetur adipisicing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+              </div>
+            </figure>
+            <figure>
+              <div>
+                <img src="{{asset 'img/trabajo.jpg'}}"
+                class="img-responsive"
+                alt="trabajo"
+                data-toggle="collapse"
+                data-target="#text-trabajo"/>
+                <div class="collapse" id="text-trabajo">
+                  <p>Trabajo ipsum dolor sit amet, consectetur adipisicing elit,
+                  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+                  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                </div>
+              </div>
+            </figure>
+          </section>
+        </div>
       </div>
   </main>
 {{/post}}
