--- a/content/themes/fedes/partials/carousel-min.hbs
+++ b/content/themes/fedes/partials/carousel-min.hbs
@@ -25,19 +25,11 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-
   <section>
-    {{#get "posts" slug="texto-principal" as |article|}}
-      {{#article}}
-        <div class="carousel-footer">
-          <span class="text-footer">
-            {{content}}
-          </span>
-        </div>
-      {{/article}}
-    {{/get}}
+    <div class="carousel-footer">
+    </div>
   </section>
 </div>
-<div class="circleCarousel" data-toggle="collapse" data-target="#galleryPrincipal">
+<div class="circleCarousel" data-toggle="collapse" data-target="#gallery-secondary">
   <img class="ruedaBlanca" src="{{asset 'img/rueda_blanca.png'}}" alt="rueda" width="20" height="20">
 </div>
