Rename gallery ID

--- a/content/themes/fedes/partials/carousel-min.hbs
+++ b/content/themes/fedes/partials/carousel-min.hbs
@@ -30,6 +30,6 @@
     </div>
   </section>
 </div>
-<div class="circleCarousel" data-toggle="collapse" data-target="#gallery-secondary">
+<div class="circleCarousel" data-toggle="collapse" data-target="#gallery-fedes">
   <img class="ruedaBlanca" src="{{asset 'img/rueda_blanca.png'}}" alt="rueda" width="20" height="20">
 </div>
