--- a/content/themes/fedes/page-servicios.hbs
+++ b/content/themes/fedes/page-servicios.hbs
@@ -3,7 +3,7 @@
   {{! The main content area on the homepage }}
   <main id="content" class="content" role="main">
       {{> "carousel-min"}}
-      <div class="container gallery-principal collapse in" id="gallery-servicios">
+      <div class="container gallery-principal collapse in" id="gallery-fedes">
         <div>
           <h2 class="gallery-title">Servicios</h2>
         </div>
