UI for gear divider

--- a/content/themes/fedes/partials/carousel.hbs
+++ b/content/themes/fedes/partials/carousel.hbs
@@ -44,6 +44,8 @@
   {{/get}}
 </section>
 
-<div class="circleCarousel" data-toggle="collapse" data-target="#galleryPrincipal">
-  <img class="ruedaBlanca" src="{{asset 'img/rueda_blanca.png'}}" alt="rueda" width="20" height="20">
+<div class="gearDivider">
+  <div>
+    <img class="ruedaBlanca" src="{{asset 'img/rueda_blanca.png'}}">
+  </div>
 </div>
