--- a/content/themes/fedes/lib/stylesheets/application.sass
+++ b/content/themes/fedes/lib/stylesheets/application.sass
@@ -3,10 +3,10 @@
 @import "components/variables"
 @import "components/navbar"
 @import "components/carousel"
+@import "components/gearDivider"
 @import "components/servicios"
 @import "components/header"
 @import "components/footer"
 @import "components/gallery"
 @import "components/navbarFooter"
 @import "components/navbarCarousel"
-
