--- a/content/themes/fedes/lib/stylesheets/components/carousel.sass
+++ b/content/themes/fedes/lib/stylesheets/components/carousel.sass
@@ -10,7 +10,7 @@
     margin-top: 1.9em
 
     @media screen and (max-width: $mobile-width)
-      margin-top: 0px;
+      margin-top: 0px
 
   .carousel-inner
     .item
@@ -56,31 +56,22 @@
     width: 100%
     margin: auto
 
-  .circleCarousel
-    margin-left: 48%
-    width: 100px
-    height: 50px
-    border-radius: 0 0 100px 100px
-    background: $blue-dark
-    padding-top: 14px
-    padding-left: 39px
-    cursor: pointer
-    position: absolute
+.carousel-footer
+  background-color: $blue-dark
+  width: 100%
+  padding-top: 50px
+  padding-bottom: 50px
 
-  .carousel-footer
-    background-color: green
-    position: absolute
-    z-index: 3
-    width: 100%
-    bottom: 0
-
-  .text-footer
+  .textFooter
     color: #FFFFFF
-    font-weight: bold
-    float:none
-    padding-left: 25%
-    padding-right: 25%
+    font-size: 1.8vw
+    white-space: normal
     text-align: center
+    position: relative
+    p
+      font-size: 19px
+      margin-bottom: 0
+      font-weight: 200
 
 @media only screen and (max-width: $mobile-width)
   .container.carousel
@@ -119,3 +110,21 @@
           border: 2px solid #fff
           border-radius: 50px
           margin: 0px 20px
+
+  .carousel-footer
+    background-color: $blue-dark
+    width: 100%
+    padding-top: 25px
+    padding-bottom: 25px
+
+    .textFooter
+      color: #FFFFFF
+      white-space: normal
+      text-align: center
+      position: relative
+      p
+        font-size: 14px
+        margin-bottom: 0
+        font-weight: 200
+        padding-left: 40px
+        padding-right: 40px
